k3s_deploy/deployment-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bomes-authentification
spec:
    replicas: 2
    selector:
        matchLabels:
            app: bomes-authentification
    template:
        metadata:
            labels:
                app: bomes-authentification
        spec:
            containers:
                - name: bomes-authentification
                  image: bomes-hub:5000/bomes-authentification:latest
