k3s_deploy/deployment-bomes-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bomes-http-auth
spec:
    replicas: 2
    selector:
        matchLabels:
            app: bomes-http-auth
    template:
        metadata:
            labels:
                app: bomes-http-auth
        spec:
            containers:
                - name: bomes-http-auth
                  image: bomes-hub:5000/bomes-http-auth:latest
