k3s_deploy/deployment-bomes-mail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bomes-http-mail
spec:
    replicas: 1
    selector:
        matchLabels:
            app: bomes-http-mail
    template:
        metadata:
            labels:
                app: bomes-http-mail
        spec:
            containers:
                - name: bomes-http-mail
                  image: bomes-hub:5000/bomes-http-mail:latest
