k3s_deploy/deployment-bomes-http-core.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: bomes-http-core
spec:
    replicas: 2
    serviceName: "bomes-http-core-service"
    selector:
        matchLabels:
            app: bomes-http-core
    template:
        metadata:
            labels:
                app: bomes-http-core
        spec:
            containers:
                - name: bomes-http-core
                  image: bomes-hub:5000/bomes-http-core:latest
---
apiVersion: v1
kind: Service
metadata:
    name: bomes-http-core-service
spec:
    selector:
        app: bomes-http-core
    ports:
        - port: 8000
          targetPort: 8000
