k3s_deploy/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-service
spec:
    type: NodePort
    ports:
        - port: 5432
          targetPort: 5432
          nodePort: 30432
    selector:
        app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres
spec:
    serviceName: postgres
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:17-alpine
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: postgres-data
                        mountPath: /var/lib/postgresql/data
                  livenessProbe:
                      tcpSocket:
                          port: 5432
                      initialDelaySeconds: 30
                      periodSeconds: 10
                  readinessProbe:
                      exec:
                          command:
                              - pg_isready
                              - -U
                              - BomesDatabase
                      initialDelaySeconds: 5
                      periodSeconds: 5
    volumeClaimTemplates:
        - metadata:
              name: postgres-data
          spec:
              accessModes: ["ReadWriteOnce"]
              storageClassName: "local-path"
              resources:
                  requests:
                      storage: 10Gi
