k3s_deploy/deployment-rabbitmq.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: rabbitmq
spec:
    serviceName: rabbitmq
    replicas: 3
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
                - name: rabbitmq
                  image: rabbitmq:4.1.4-management-alpine
                  ports:
                      - containerPort: 5672
                        name: amqp
                      - containerPort: 15672
                        name: http
                      - containerPort: 4369
                        name: epmd
                      - containerPort: 25672
                        name: cluster
                  volumeMounts:
                      - name: config
                        mountPath: /etc/rabbitmq
                      - name: data
                        mountPath: /var/lib/rabbitmq
                  livenessProbe:
                      exec:
                          command: ["rabbitmq-diagnostics", "status"]
                      initialDelaySeconds: 60
                      periodSeconds: 30
                      timeoutSeconds: 15
                  readinessProbe:
                      exec:
                          command: ["rabbitmq-diagnostics", "ping"]
                      initialDelaySeconds: 20
                      periodSeconds: 10
                      timeoutSeconds: 10
                  resources:
                      requests:
                          memory: "512Mi"
                          cpu: "1000m"
                      limits:
                          memory: "1Gi"
                          cpu: "1000m"
            volumes:
                - name: config
                  configMap:
                      name: rabbitmq-config
                      items:
                          - key: rabbitmq.conf
                            path: rabbitmq.conf
                          - key: enabled_plugins
                            path: enabled_plugins
                - name: rabbitmq-secret
                  secret:
                      secretName: rabbitmq-secret
    volumeClaimTemplates:
        - metadata:
              name: data
          spec:
              accessModes: ["ReadWriteOnce"]
              storageClassName: local-storage
              resources:
                  requests:
                      storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
    labels:
        app: rabbitmq
spec:
    clusterIP: None
    ports:
        - port: 5672
          name: amqp
        - port: 15672
          name: http
        - port: 4369
          name: epmd
        - port: 25672
          name: cluster
    selector:
        app: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-management
    labels:
        app: rabbitmq
spec:
    ports:
        - port: 15672
          targetPort: 15672
          name: http
    selector:
        app: rabbitmq
    type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: bomes-rabbitmq-ingress
spec:
    rules:
        - host: rabbitmq-dev.bomes.ru
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: rabbitmq-management
                            port:
                                number: 15672
